# url-short-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-optimized  Dockerfile-scratch  README.md  build_arm64.sh  compare_performance.sh  go_results.json  loadtest.js  rust_results.json  update_all_deps.sh
.github/: dependabot.yml
.github/workflows/: all-ci.yml  docker-go-publish.yml  docker-publish.yml  docker-python-publish.yml  go-ci.yml  python-ci.yml  python-ci.yml.new  rust-ci.yml
go-version/: Dockerfile  Dockerfile-optimized  README.md  go.mod  go.sum  go_results.json  loadtest.js  main.go
go-version/static/: index.html
k6/: loadtest.js
locust/: locustfile.py
python-version/: Dockerfile  Dockerfile-optimized  README.md  create_lockfile.sh  docker-entrypoint.sh  docker-python-publish.yml  loadtest.js  main.py  mypy.ini  pyproject.toml  test_main.py  update_deps.sh
python-version/static/: index.html
src/: main.rs
static/: index.html
tests/: api_tests.rs
