[package]
name = "url-short-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
nanoid = "0.4.0"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
dashmap = "6.1.0"

[dev-dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
