[project]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "uvloop>=0.19.0",
    "nanoid>=2.0.0",
    "pydantic>=2.6.3",
    "httptools>=0.6.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
