[project]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
    "nanoid>=2.0.0",
    "pydantic>=2.11.0",
    "httptools>=0.6.1",
    "python-multipart>=0.0.9",
    "watchfiles>=0.21.0",
    "websockets>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
